replace camelCase id's to avoid Android Studio bug (find usage)

--- a/app/src/main/res/layout-land/dialog_cover_browser_content.xml
+++ b/app/src/main/res/layout-land/dialog_cover_browser_content.xml
@@ -105,7 +105,7 @@
         tools:visibility="visible" />
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
-        android:id="@+id/previewProgressBar"
+        android:id="@+id/preview_progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="invisible"
