--- a/app/src/main/res/layout/dialog_cover_browser_content.xml
+++ b/app/src/main/res/layout/dialog_cover_browser_content.xml
@@ -108,7 +108,7 @@
         />
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
-        android:id="@+id/previewProgressBar"
+        android:id="@+id/preview_progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="invisible"
