--- a/app/src/main/res/layout/fragment_edit_search_order.xml
+++ b/app/src/main/res/layout/fragment_edit_search_order.xml
@@ -30,7 +30,7 @@
     >
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/siteList"
+        android:id="@+id/site_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:clipToPadding="false"
