add 'isComplete' check on the list view

--- a/app/src/main/res/layout/row_edit_series_list.xml
+++ b/app/src/main/res/layout/row_edit_series_list.xml
@@ -38,6 +38,9 @@
         <TextView
             android:id="@+id/row_series"
             style="@style/RowEditor.Text.Primary"
+            android:drawablePadding="@dimen/field_margin_inline"
+            app:drawableTint="?attr/colorSecondary"
+            tools:drawableEnd="@drawable/done_all_24px"
             tools:ignore="SelectableText"
             tools:text="@sample/data.json/series/title_nr"
             />
