tweaking edge2edge for the drawer/nav layouts

--- a/app/src/main/res/layout-land/fragment_about.xml
+++ b/app/src/main/res/layout-land/fragment_about.xml
@@ -29,22 +29,14 @@
 
     <ImageView
         android:id="@+id/app_icon"
-        android:layout_width="@dimen/app_logo"
-        android:layout_height="@dimen/app_logo"
-        android:layout_marginStart="8dp"
-        android:contentDescription="@string/app_name"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:scaleX="2"
-        android:scaleY="2"
-        android:src="@drawable/launcher_foreground"
+        style="@style/About.AppIcon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/app_name"
         style="@style/About.AppName"
-        android:text="@string/app_name"
         app:layout_constraintBottom_toBottomOf="@id/app_icon"
         app:layout_constraintStart_toEndOf="@id/app_icon"
         app:layout_constraintTop_toTopOf="@id/app_icon"
