--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -20,6 +20,8 @@
   -->
 
 <resources>
+    <dimen name="app_icon_size_large">64dp</dimen>
+
     <dimen name="progress_margin_top">50dp</dimen>
     <dimen name="progress_width">340dp</dimen>
 
