--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -25,6 +25,8 @@
     land:  w640dp h336dp
 -->
 <resources>
+    <dimen name="app_icon_size">80dp</dimen>
+
     <dimen name="progress_width">340dp</dimen>
     <dimen name="progress_padding">8dp</dimen>
 
