--- a/app/src/main/res/layout/booksonbookshelf.xml
+++ b/app/src/main/res/layout/booksonbookshelf.xml
@@ -49,7 +49,7 @@
                 <Spinner
                     android:id="@+id/bookshelf_spinner"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     tools:entries="@array/tools_spinner_title"
                     />
 
