Basic edge-to-edge is enable for API 30+ only. Now working for all screens except book-edit. The book-edit page relies on, and is limited by, fitsSystemWindows. Next step verify/tweak individual screens.

--- a/app/src/main/res/layout/activity_edit_book.xml
+++ b/app/src/main/res/layout/activity_edit_book.xml
@@ -26,6 +26,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".FragmentHostActivity"
     >
 
@@ -44,6 +45,14 @@
                 android:id="@+id/toolbar"
                 style="@style/Toolbar.Activity"
                 tools:title="activity_edit_book"
+                />
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tab_panel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_scrollFlags="scroll|enterAlways|snap"
+                tools:ignore="SpeakableTextPresentCheck"
                 />
 
         </com.google.android.material.appbar.AppBarLayout>
