--- a/app/src/main/res/layout/booksonbookshelf.xml
+++ b/app/src/main/res/layout/booksonbookshelf.xml
@@ -30,7 +30,7 @@
     >
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/coordinator"
+        android:id="@+id/coordinator_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
