--- a/app/src/main/res/layout/fragment_edit_book_fields.xml
+++ b/app/src/main/res/layout/fragment_edit_book_fields.xml
@@ -23,11 +23,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ns_edit_book_fields"
     style="@style/TopNestedScroller"
     tools:context=".FragmentHostActivity"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/ns_content_edit_book_fields"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="@dimen/container_margin"
