--- a/app/src/main/res/layout/popup_menu.xml
+++ b/app/src/main/res/layout/popup_menu.xml
@@ -22,6 +22,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/dialog_content"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
