--- a/app/src/main/res/layout/fragment_edit_book.xml
+++ b/app/src/main/res/layout/fragment_edit_book.xml
@@ -28,6 +28,16 @@
     tools:context=".FragmentHostActivity"
     >
 
+    <!--
+    https://stackoverflow.com/questions/39438743/tablayoutviewpager-inside-scrollview
+    https://stackoverflow.com/questions/40061259/how-to-make-tablayout-scrollable-in-fragment
+    https://stackoverflow.com/questions/40061259/how-to-make-tablayout-scrollable-in-fragment
+
+    The only way to make the TabLayout scroll off the top of the screen is by
+    putting the TabLayout inside the AppBarLayout (where we had it in the past)
+    with         app:layout_scrollFlags="scroll|enterAlways"
+    But that opens a whole new can of worms with edge-to-edge...
+    -->
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_panel"
         android:layout_width="match_parent"
