--- a/app/src/main/res/drawable/bg_outline_rounded.xml
+++ b/app/src/main/res/drawable/bg_outline_rounded.xml
@@ -24,7 +24,7 @@
     <solid android:color="?attr/colorSurface" />
     <stroke
         android:width="1dp"
-        android:color="?attr/colorOnSurface" />
+        android:color="?attr/colorSurface" />
     <corners
         android:radius="@dimen/floating_dialog_corner_radius" />
 </shape>
