--- a/app/src/main/res/layout/fragment_edit_bookshelves.xml
+++ b/app/src/main/res/layout/fragment_edit_bookshelves.xml
@@ -22,7 +22,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/TopCentered"
+    style="@style/FragmentRoot.ConstraintLayout"
     tools:context=".FragmentHostActivity"
     >
 
