--- a/app/src/main/res/layout-land/fragment_maintenance.xml
+++ b/app/src/main/res/layout-land/fragment_maintenance.xml
@@ -23,12 +23,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/TopNestedScroller"
+    style="@style/FragmentRoot.NestedScroller"
     tools:context=".FragmentHostActivity"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        style="@style/TopCentered"
+        style="@style/FragmentRoot.ConstraintLayout"
         >
 
         <androidx.constraintlayout.widget.Guideline
