--- a/app/src/main/res/layout-land/fragment_sync_export.xml
+++ b/app/src/main/res/layout-land/fragment_sync_export.xml
@@ -22,14 +22,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/TopNestedScroller"
+    style="@style/FragmentRoot.NestedScroller"
     android:visibility="invisible"
     tools:context=".FragmentHostActivity"
     tools:visibility="visible"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        style="@style/TopCentered"
+        style="@style/FragmentRoot.ConstraintLayout"
         >
 
         <com.hardbacknutter.nevertoomanybooks.core.widgets.ConstraintRadioGroup
