--- a/app/src/main/res/layout-sw800dp/fragment_book_details.xml
+++ b/app/src/main/res/layout-sw800dp/fragment_book_details.xml
@@ -25,7 +25,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ns_book_details"
-    style="@style/TopNestedScroller"
+    style="@style/FragmentRoot.NestedScroller"
     tools:context=".FragmentHostActivity"
     tools:viewBindingIgnore="true"
     >
