--- a/app/src/main/res/layout/dialog_select_multiple.xml
+++ b/app/src/main/res/layout/dialog_select_multiple.xml
@@ -58,6 +58,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/dialogPreferredPaddingTop"
+        android:scrollbars="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
