--- a/app/src/main/res/layout-land/fragment_advanced_search.xml
+++ b/app/src/main/res/layout-land/fragment_advanced_search.xml
@@ -22,12 +22,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ns_content_body"
     style="@style/FragmentRoot.NestedScroller"
     tools:context=".FragmentHostActivity"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/content"
+        android:id="@+id/content_body"
         style="@style/FragmentRoot.ConstraintLayout"
         android:layout_height="wrap_content"
         >
