--- a/app/src/main/res/layout-land/fragment_book_details.xml
+++ b/app/src/main/res/layout-land/fragment_book_details.xml
@@ -23,14 +23,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ns_book_details"
+    android:id="@+id/ns_content_body"
     style="@style/FragmentRoot.NestedScroller"
     tools:context=".FragmentHostActivity"
     tools:viewBindingIgnore="true"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/ns_content_book_details"
+        android:id="@+id/content_body"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="@dimen/container_margin"
