--- a/app/src/main/res/layout/dialog_tip.xml
+++ b/app/src/main/res/layout/dialog_tip.xml
@@ -28,7 +28,7 @@
     >
 
     <TextView
-        android:id="@+id/content"
+        android:id="@+id/message"
         style="@style/Text.Body"
         android:textAppearance="?attr/textAppearanceBodyLarge"
         android:textIsSelectable="true"
