--- a/app/src/main/res/layout/fragment_edit_book_external_id.xml
+++ b/app/src/main/res/layout/fragment_edit_book_external_id.xml
@@ -23,13 +23,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ns_edit_book_ext_id"
+    android:id="@+id/ns_content_body"
     style="@style/FragmentRoot.NestedScroller"
-    tools:context=".FragmentHostActivity"
-    tools:viewBindingIgnore="true">
+    tools:viewBindingIgnore="true"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/ns_content_edit_book_ext_id"
+        android:id="@+id/content_body"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="@dimen/container_margin"
