--- a/app/src/main/res/layout/booksonbookshelf_content.xml
+++ b/app/src/main/res/layout/booksonbookshelf_content.xml
@@ -21,6 +21,7 @@
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
   -->
 
+<!-- We should not need this outer layout... but Studio throws a render issue if we remove it? -->
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
